--- a/frontend/src/app/components/home/login/login-popup-component.html
+++ b/frontend/src/app/components/home/login/login-popup-component.html
@@ -10,7 +10,7 @@
           <label>Địa chỉ e-mail:</label>
         </div>
         <div class="col-12">
-          <input type="text" class="form-control" placeholder="Nhập địa chỉ e-mail">
+          <input type="text" class="form-control" placeholder="Nhập địa chỉ e-mail" [(ngModel)]="username">
         </div>
       </div>
       <div class="row my-3">
@@ -18,7 +18,7 @@
           <label>Mật khẩu:</label>
         </div>
         <div class="col-12">
-          <input type="password" class="form-control" placeholder="Nhập mật khẩu">
+          <input type="password" class="form-control" placeholder="Nhập mật khẩu" [(ngModel)]="password">
         </div>
         <div class="col-12">
           <span class="forget-password" (click)="forgetPassword()">Quên mật khẩu?</span>
@@ -32,7 +32,7 @@
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary" (click)="close()">Hủy</button>
-      <button type="button" class="btn btn-primary">Đăng nhập</button>
+      <button type="button" class="btn btn-primary" (click)="login()">Đăng nhập</button>
     </div>
   </div>
 </div>
