--- a/frontend/src/app/components/home/sign-up/sign-up-popup.component.html
+++ b/frontend/src/app/components/home/sign-up/sign-up-popup.component.html
@@ -7,7 +7,7 @@
     <div class="modal-body py-0">
       <div class="row my-3">
         <div class="col-12">
-          <label>Địa chỉ e-mail:</label>
+          <label>Địa chỉ e-mail <span class="text-danger">*</span></label>
         </div>
         <div class="col-12">
           <input type="text" class="form-control" placeholder="Nhập địa chỉ e-mail">
@@ -15,7 +15,7 @@
       </div>
       <div class="row my-3">
         <div class="col-12">
-          <label>Mật khẩu:</label>
+          <label>Mật khẩu <span class="text-danger">*</span></label>
         </div>
         <div class="col-12">
           <input type="password" class="form-control" placeholder="Nhập mật khẩu">
@@ -23,7 +23,7 @@
       </div>
       <div class="row my-3">
         <div class="col-12">
-          <label>Xác nhận nật khẩu:</label>
+          <label>Xác nhận nật khẩu <span class="text-danger">*</span></label>
         </div>
         <div class="col-12">
           <input type="password" class="form-control" placeholder="Nhập lại mật khẩu">
@@ -31,7 +31,7 @@
       </div>
       <div class="row my-3">
         <div class="col-12">
-          <label>Họ và tên:</label>
+          <label>Họ và tên <span class="text-danger">*</span></label>
         </div>
         <div class="col-12">
           <input type="text" class="form-control" placeholder="Nhập họ và tên">
@@ -39,7 +39,7 @@
       </div>
       <div class="row my-3">
         <div class="col-12">
-          <label>Số điện thoại:</label>
+          <label>Số điện thoại <span class="text-danger">*</span></label>
         </div>
         <div class="col-12">
           <input type="text" class="form-control" placeholder="Nhập số điện thoại">
@@ -47,7 +47,7 @@
       </div>
       <div class="row my-3 align-items-center">
         <div class="col-auto">
-          <label>Giới tính:</label>
+          <label>Giới tính <span class="text-danger">*</span></label>
         </div>
         <div class="col-auto">
           <input type="radio" class="form-control-radio" checked name="sex">
@@ -60,7 +60,7 @@
       </div>
       <div class="row my-3">
         <div class="col-12">
-          <label>Địa chỉ:</label>
+          <label>Địa chỉ <span class="text-danger">*</span></label>
         </div>
         <div class="col-12">
           <input type="text" class="form-control" placeholder="Nhập địa chỉ">
