--- a/frontend/src/app/components/home/landing-page/landing-page.component.html
+++ b/frontend/src/app/components/home/landing-page/landing-page.component.html
@@ -1,5 +1,5 @@
 <banner></banner>
 <slide-show-banner></slide-show-banner>
-<slide-show-product [id] = "'hot'" [title] = "'Thời trang đề cử'"></slide-show-product>
-<slide-show-product [id] = "'best'" [title] = "'Thời trang bán chạy'"></slide-show-product>
+<slide-show-product [id] = "'hot'" [title] = "'Thời trang đề cử'" [products] = "hotProducts"></slide-show-product>
+<slide-show-product [id] = "'best'" [title] = "'Thời trang bán chạy'" [products] = "bestProducts"></slide-show-product>
 <our-services></our-services>
