--- a/frontend/src/app/components/home/top-menu/top-menu.component.html
+++ b/frontend/src/app/components/home/top-menu/top-menu.component.html
@@ -10,29 +10,29 @@
       <li class="nav-item" [class.active] = "activePage === 'product'" id="ProductBtn"><a class="nav-link" href="/san-pham">Sản phẩm</a></li>
     </ul>
     <ul class="navbar-nav ml-auto">
-      <ng-container *ngIf="authen">   
+      <ng-container *ngIf="user">   
         <li class="nav-item">
           <div class="dropdown">
             <a class="btn btn-success dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <img src="" alt="User's Avatar" class="rounded-circle" width="20px" />
+              <img src="{{user.image}}" alt="User's Avatar" class="rounded-circle" width="20px" />
 
-              <span class="text-white p-2 my-1"> Nguyễn Huỳnh Phúc</span>
+              <span class="text-white p-2 my-1"> {{user.fullName}}</span>
 
             </a>
 
             <div class="dropdown-menu dropdown-menu-right offset-2" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item" href="#modalSignIn" data-toggle="modal">Chuyển tài khoản</a>
+              <a class="dropdown-item" data-toggle="modal" (click) = "showLogin()">Chuyển tài khoản</a>
               <a class="dropdown-item" href="/xem-don-hang">Đơn hàng</a>
               <a class="dropdown-item" href="/thong-tin-ca-nhan">Thông tin cá nhân<span class="float-right"><i
                     class="far fa-user"></i></span></a>
-              <a class="dropdown-item" (click)="logout()">Đăng xuất<span class="float-right"><i
+              <a class="dropdown-item cursor-pointer" (click)="logout()">Đăng xuất<span class="float-right"><i
                     class="fas fa-sign-out-alt"></i></span></a>
             </div>
           </div>
         </li>
       </ng-container>
-      <ng-container *ngIf="!authen">
+      <ng-container *ngIf="!user">
         <li class="nav-item"><a class="btn btn-success text-white" (click) = "showLogin()">Đăng nhập</a></li>
         <li class="nav-item "><a class="nav-link cursor-pointer" (click)="showSignUp()">Đăng ký</a></li>
       </ng-container>
