--- a/frontend/src/app/components/home/orders/orders.component.html
+++ b/frontend/src/app/components/home/orders/orders.component.html
@@ -77,7 +77,7 @@
       <div class="row">
         <div class="col-auto ml-auto">
           <div class="w-auto">
-            <button class="btn btn-info">Xem chi tiết</button>
+            <button class="btn btn-info" (click)="moveToDetail(order.id)">Xem chi tiết</button>
           </div>
         </div>
       </div>
